# finos_fraud_demo

./: .gitignore  README.md  agent.py  demo-ui.py  import-documents.py  next-steps-agentic_app.py  pyproject.toml
tools/: tool.py
